--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
-numpy>=1.20.0
-scipy>=1.7.0
-matplotlib>=3.3.0
+# Core scientific computing
+numpy>=1.24.0
+scipy>=1.10.0
+
+# Visualization
+matplotlib>=3.7.0
+plotly>=5.14.0
+
+# Data fetching
+requests>=2.28.0
 
